# coming_leaving_time_checker

./: Dockerfile  README.md  app.py  config.py  main.py  models.py  pyproject.toml  queries.py  tests.py  time_checker.py
templates/: base.html  home.html  results.html  show_result.html
test_data/: new_small.xml  test_data.json
