[tool.poetry]
name = "2gis_coming_leaving_time"
version = "0.1.0"
description = "Test work to 2gis: process XML file, and make small analytic with persons and time coming/leaving"
authors = ["Anton Batishchev <antonbat125a@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
SQLAlchemy = "^1.3.20"
Jinja2 = "^2.11.2"
uvicorn = "^0.12.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
